--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="../src/images/favicon-32x32.png"
+      href="./favicon-32x32.png"
     />
 
     <title>Frontend Mentor | Todo app</title>
